Fix content width on mobile display bug

--- a/src/sass/stylesheet.scss
+++ b/src/sass/stylesheet.scss
@@ -1,6 +1,6 @@
 body {
     max-width: 960px;
-    width: 960px;
+    width: 100%;
     margin: auto;
 }
 
